--- a/src/app/pagination/pagination.component.html
+++ b/src/app/pagination/pagination.component.html
@@ -1,22 +1,47 @@
 
-    <div id="indexing">
-        <ul *ngFor="let set of currentList[0]" id="pagination">
-            <li><a href="#" (click)="showSetIn($event, set)">{{set}}</a></li>
-          </ul>
+    <div *ngIf="!isDashboard">
+        <div id="indexing">
+            <ul *ngFor="let set of currentList[0]" id="pagination">
+                <li><a href="#" (click)="showSetIn($event, set)">{{set}}</a></li>
+              </ul>
+        </div>
+        <br><br>
+        <p class="text-center" id="currentSet">{{currentSetIn}}</p>
+        <!-- <br> -->
+        <div class="padding-talks container">
+            <ul *ngFor="let item of itemList" class="list-group" id="list" >
+                <li class="list-group-item list-group-item-action mp3" (click)='promote(item)'>
+                  <span>{{item.name}}</span>&nbsp;&nbsp;
+                  <audio controls id="audio">
+                    <source [src]="item.url" type="audio/mp3"> 
+                  </audio>
+                </li>
+            </ul>
+        </div>
     </div>
-    <br><br>
-    <p class="text-center" id="currentSet">{{currentSetIn}}</p>
-    <!-- <br> -->
-    <div class="padding-talks container">
-        <ul *ngFor="let item of itemList" class="list-group" id="list" >
-            <li class="list-group-item list-group-item-action mp3" (click)='promote(item)'>
-              <span>{{item.name}}</span>&nbsp;&nbsp;
-              <audio controls id="audio">
-                <source [src]="item.url" type="audio/mp3"> 
-              </audio>
-            </li>
-        </ul>
+
+    <div *ngIf="isDashboard">
+        <div id="indexing">
+            <ul *ngFor="let set of currentList[0]" id="pagination">
+                <li><a href="#" (click)="showSetIn($event, set)">{{set}}</a></li>
+              </ul>
+        </div>
+        <br><br>
+        <p class="text-center" id="currentSet">{{currentSetIn}}</p>
+        <!-- <br> -->
+        <div class="padding-talks container">
+            <ul *ngFor="let item of itemList" class="list-group" id="list" >
+                <li class="list-group-item list-group-item-action mp3">
+                  <span>{{item.name}}</span>&nbsp;&nbsp;
+                  <audio controls id="audio">
+                    <source [src]="item.url" type="audio/mp3"> 
+                  </audio>
+                </li>
+            </ul>
+        </div>
     </div>
+
+    <!-- <loader [isLoading]='isLoading' [message]="'Loading'"></loader> -->
 
 
 
