--- a/src/app/password-reset/password-reset.component.html
+++ b/src/app/password-reset/password-reset.component.html
@@ -1,11 +1,11 @@
-<!-- 
-<div class="container compress" id="login">
-    <div class="container alert alert-danger alert-dismissible" *ngIf="!isLoggedIn">
+
+<div class="container compress" id="reset">
+    <div class="container alert alert-success alert-dismissible" *ngIf="isChanged">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
-        <p class="text-justify">Username/Password incorrect!</p>
+        <p class="text-center">Password Updated Successfully</p>
     </div>
-  <form class="form-group" [formGroup]="formGroup">
-    <h3 class="center">Login:</h3>
+  <form class="form-group" [formGroup]="resetGroup">
+    <h3 class="center">Reset Password:</h3>
     <div class="input-group">
       <i class=" fas fa-user input-group-addon"></i>
         <input
@@ -13,8 +13,8 @@
          formControlName="email"
          class="form-control input-group-text" type="text" placeholder="Username/Email" #email>
     </div>
-    <div class="alert alert-danger" *ngIf='f.email.touched && f.email.invalid'>
-      <div *ngIf='f.email.errors.required || f.email.errors?.email || f.email.errors?.emailError'>
+    <div class="alert alert-danger" *ngIf='r.email.touched && r.email.invalid'>
+      <div *ngIf='r.email.errors.required || r.email.errors?.email || r.email.errors?.emailError'>
         Enter Proper email id.
       </div>
     </div>
@@ -23,22 +23,27 @@
         <input 
         name="password" 
         formControlName="password"
-        class="form-control input-group-text" type="password" placeholder="Password" #password>
+        class="form-control input-group-text" type="password" placeholder="New Password" #password>
     </div>
     <div class="input-group">
-        <input type="checkbox"
-        name="rememberMe"
-        formControlName="rememberMe"
-        (change)='isChecked($event)' #remember><span id="remember"
-        >Remember Me</span>
+        <i class=" fas fa-lock input-group-addon"></i>
+        <input 
+        name="pwd_renter" 
+        formControlName="pwd_renter"
+        class="form-control input-group-text" type="password" placeholder="Confirm Password" #pwd_renter>
     </div>
-    <button id="login" class="btn btn-success text-center" (click)="auth(email.value, password.value)" type="submit"
-    [disabled]='f.email.invalid'>login</button>
-    <p>Are you new user?<a routerLink="/register"> signup here.</a></p>
-    <p>Forgot your password?<a routerLink="/passwordReset"> click here.</a></p>
+        <div class="alert alert-danger" *ngIf="pwdMatch(password.value, pwd_renter.value)">
+            Password Did not Match.
+        </div>
+        <div class="alert alert-danger" *ngIf='(r.password.invalid && r.password.touched) || (r.pwd_renter.invalid && r.pwd_renter.touched)'>
+            <div id='password' *ngIf='r.password.errors?.required || r.password.errors?.minlength || r.pwd_renter.errors?.required || r.pwd_renter.errors?.minlength'>
+              Password is required and min 6
+            </div>
+          </div>
+    <button id="login" class="btn btn-success text-center" (click)="resetPwd(email.value, password.value)" type="submit"
+    [disabled]='resetGroup.invalid'>Reset Password</button>
+    <p>You can<a routerLink="/login"> login here.</a></p>
   </form>
-  <div *ngIf="isLoading" id="loading">
-      <p class="text-center">Checking Credentials...</p>
-      <div class="spinner-border text-primary" id="spinner"></div>
-  </div>
-</div> -->
+</div>
+
+<loader [isLoading]='isLoading' [message]="'Updating'"></loader>
