--- a/src/app/shared-talks/shared-talks.component.html
+++ b/src/app/shared-talks/shared-talks.component.html
@@ -35,3 +35,5 @@
   
 <br>
 <pagination [items]="listOfTalks" [size]="lengthOfItems"></pagination>
+
+<loader [isLoading]='isLoading' [message]="'Loading'"></loader>
