fixed the three dots side menu issue

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
       </ul>
     </div> 
     <div id="main-menu">
-      <i class="fas fa-ellipsis-v" *ngIf="isLoggedIn"></i>
+      <i class="fas fa-ellipsis-v"></i>
     </div> 
   </nav>
 
