added test cases and push notification support

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -39,4 +39,5 @@
   </form>
 </div>
 
-<loader [isLoading]='isLoading' [message]="'user Authentication'"></loader>
+<loader [message]="'user Authentication'"></loader>
+
