--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -118,4 +118,4 @@
     <p>Have an account already?<a routerLink="/"> login here.</a></p>
   </form>
 </div>
-<loader [isLoading]='isLoading' [message]="'Saving'"></loader>
+<loader [message]="'Saving'"></loader>
