--- a/src/app/shared-talks/shared-talks.component.html
+++ b/src/app/shared-talks/shared-talks.component.html
@@ -36,4 +36,4 @@
 <br>
 <pagination [items]="listOfTalks" [size]="lengthOfItems"></pagination>
 
-<loader [isLoading]='isLoading' [message]="'Loading'"></loader>
+<loader [message]="'Loading'"></loader>
