--- a/src/app/loader/loader.component.html
+++ b/src/app/loader/loader.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="isLoading" id="loading">
+<div id="loading">
     <p class="text-center">{{message}}...</p>
     <div class="spinner-border text-primary" id="spinner"></div>
 </div>
