--- a/src/app/shared-talks/shared-talks.component.html
+++ b/src/app/shared-talks/shared-talks.component.html
@@ -34,6 +34,6 @@
 </div>
   
 <br>
-<pagination [items]="listOfTalks" [size]="lengthOfItems"></pagination>
+<pagination [items]="listOfTalks" [size]="lengthOfItems" *ngIf="refresh"></pagination>
 
 <loader [message]="'Loading'"></loader>
