completed the copied to clip board

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -63,11 +63,11 @@
                 <div class="col-sm-3 col-xs-3 col-3" *ngIf="obj.bp2!=''">
                     <p>Bp2: {{obj.bp2}}</p>
                 </div>
-                <div class="col-sm-3 col-xs-3 col-3" *ngIf="obj.fp1!=''">
-                    <p>FP1: {{obj.fp1}}</p>
+                <div class="col-sm-3 col-xs-3 col-3" *ngIf="obj.ft1!=''">
+                    <p>FT1: {{obj.ft1}}</p>
                 </div>
-                <div class="col-sm-3 col-xs-3 col-3" *ngIf="obj.fp2!=''">
-                    <p>FP2: {{obj.fp2}}</p>
+                <div class="col-sm-3 col-xs-3 col-3" *ngIf="obj.ft2!=''">
+                    <p>FT2: {{obj.ft2}}</p>
                 </div>
                 <div class="col-sm-3 col-xs-3 col-3" *ngIf="obj.preLaunch!=''">
                     <p>PreL: {{obj.preLaunch}}</p>
